# iNaturalistReactNative

./: .detoxrc.js  .eslintrc.js  .gitignore  AGENTS.md  CLAUDE.md  README.md  app.config.js  apple-app-site-association.json  babel.config.js  crop_training.eval.csv  crop_training.json  deploy.sh  eas-project-id.example  eas.json  env.ios.example  metro.config.js  package-lock.json  package.json
.cursor/rules/: always.mdc
.github/workflows/: eas-android-preview.yml  (+3 more)
.husky/: pre-commit
__mocks__/: realm.js
android/: build.gradle  settings.gradle
assets/: upload-demo.webm
fastlane/: example-Appfile
ios/: Podfile
patches/: react-native-draggable-flatlist+4.0.1.patch
scripts/: e2e-vision-saliency-example.sh  eas-pre-install.sh  evaluate_subject_detector.py  experiment_algorithms.py  fork-branch-commits.sh  grid_search_detector.py  npr_remote  poll_develop_squash.sh  pull_crop_log.py  run-vision-saliency.js
tests/: jest.setup.js
tools/inat_vision_saliency/: INTEGRATION.md  convert_tflite_to_onnx.py  pyproject.toml  requirements.txt  saliency.py
tools/inat_vision_saliency/examples/: DUAL_SALIENCY_EXAMPLE.md  EXAMPLES.md  generate_dual_class_saliency_example.py  generate_gallery.py
tools/inat_vision_saliency/examples/outputs/: example_waterfowl_dual_saliency_true_backprop.json
tools/inat_vision_saliency/inat_vision_saliency/: __init__.py  __main__.py  cli.py  constants.py  download.py  model.py  onnx_convert.py  pipeline.py  preprocess.py  saliency_map.py
tools/inat_vision_saliency/scripts/: export_tfjs_graph_model.sh  saliency_grad_http_server.py
(+435 files in other folders)
